[package]
name = "suggestinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0"
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.19"
serde = "1.0"
bson = "2.1.0"
imdb-id = "2.0.2"
reqwest = "0.11.9"
serenity = { version = "0.10.9", default-features = false, features = ["framework", "standard_framework", "client", "gateway", "rustls_backend", "model"] }
